Bug 474685 - Ctrl+Alt+B in lokalize no longer works
Summary: Ctrl+Alt+B in lokalize no longer works
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-19 09:21 UTC by Freek de Kruijf
Modified: 2024-02-14 20:04 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (145.43 KB, image/png)
2023-09-19 09:21 UTC, Freek de Kruijf
Details
screenshot of configure shortcuts dialog (444.19 KB, image/png)
2023-09-20 08:30 UTC, Freek de Kruijf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2023-09-19 09:21:12 UTC
Created attachment 161713 [details]
screenshot

SUMMARY
***
Since using this version using Ctrl+Alt+B does no longer updates elements which have a score of 100% in the Translation Memory.
***


STEPS TO REPRODUCE
1. Start with a .po file
2. Press Ctrl+Alt+B
3. Go to an untranslated element and the Translation Memory subwindow shows a 100% translated item and only one, but the subwindow for the translation is empty. 

OBSERVED RESULT
See above

EXPECTED RESULT
The subwindow for the translation should contain the translation, even indicated as fully translated and not fuzzy.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 6.5.2

ADDITIONAL INFORMATION
Comment 1 Albert Astals Cid 2023-09-19 20:13:06 UTC
Works for me.

Do you get a notification of things happening?

Can you confirm Ctrl+Alt+B is listed as shortcut in the configure shortcuts dialog?
Comment 2 Freek de Kruijf 2023-09-20 08:28:51 UTC
(In reply to Albert Astals Cid from comment #1)
> Works for me.
> 
> Do you get a notification of things happening?
> 
> Can you confirm Ctrl+Alt+B is listed as shortcut in the configure shortcuts
> dialog?

Yes, see attached screenshot.
Comment 3 Freek de Kruijf 2023-09-20 08:30:10 UTC
Created attachment 161741 [details]
screenshot of configure shortcuts dialog
Comment 4 Albert Astals Cid 2023-09-20 15:37:00 UTC
You're on X11 or Wayland?
Comment 5 Freek de Kruijf 2023-09-20 21:06:27 UTC
(In reply to Albert Astals Cid from comment #4)
> You're on X11 or Wayland?

X11
Comment 6 Albert Astals Cid 2023-09-20 21:48:48 UTC
Then no idea why it works for me and not you :/
Comment 7 Freek de Kruijf 2023-11-01 09:49:44 UTC
Still present in version 22.08.2 in openSUSE Tumbleweed
Comment 8 Roman Paholík 2023-11-29 10:03:19 UTC
I have the same problem in Kubuntu 23.10. After pressing Ctrl+Alt+B I see the notification about starting batch translation, but nothing happens then.
Comment 9 Adrián Chaves (Gallaecio) 2023-11-30 09:26:33 UTC
Me too, on Arch, it has been happening for a while now but I cannot pinpoint when it started.
Comment 10 wojnilowicz 2023-11-30 16:49:01 UTC
I'm experiencing this issue as well on Fedora 39.
Comment 11 Adrián Chaves (Gallaecio) 2023-11-30 17:27:17 UTC
I prefixed the config file and shared folder with ~, created a simple project with 1 PO file, opened it to let the tm fill, closed Lokalize, edited out 1 of the messages with KWrite, and opened the file again with Lokalize. Auto-fill worked.

So it seems it can work, but for some reason it does not with my actual Lokalize settings and shared files, including my ≥100 MiB translation memory file.
Comment 12 Adrián Chaves (Gallaecio) 2023-12-04 08:25:53 UTC
OK, so I had a `[TM]` section in $HOME/.config/lokalizerc with 3 boolean options. Removing that seemed to make the feature work again, somewhat (new strings will be marked as fuzzy even if I do not choose that).

Could you all see what’s in your `[TM]` section, and see if removing that and restarting Lokalize brings the feature back for you as well.
Comment 13 Roman Paholík 2023-12-04 08:38:23 UTC
Yes, it indeed works!
Comment 14 Freek de Kruijf 2023-12-04 11:03:43 UTC
(In reply to Adrián Chaves (Gallaecio) from comment #12)
> OK, so I had a `[TM]` section in $HOME/.config/lokalizerc with 3 boolean
> options. Removing that seemed to make the feature work again, somewhat (new
> strings will be marked as fuzzy even if I do not choose that).
> 
> Could you all see what’s in your `[TM]` section, and see if removing that
> and restarting Lokalize brings the feature back for you as well.

Indeed it brings back the feature. Thanks!

The names do not suggest this affects this feature.

That they often are marked as fuzzy while they are exact matches has been my experience in the past.
At least some are now translated and no longer marked as fuzzy.
Comment 15 Bug Janitor Service 2023-12-28 14:18:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/86
Comment 16 wojnilowicz 2023-12-28 14:25:22 UTC
(In reply to Adrián Chaves (Gallaecio) from comment #12)
> OK, so I had a `[TM]` section in $HOME/.config/lokalizerc with 3 boolean
> options. Removing that seemed to make the feature work again, somewhat (new
> strings will be marked as fuzzy even if I do not choose that).
> 
> Could you all see what’s in your `[TM]` section, and see if removing that
> and restarting Lokalize brings the feature back for you as well.

Probably only "Settings->Translation Memory->Prefetch translation memory suggestions on file open" checkbox needs to by unchecked.
Comment 17 wojnilowicz 2024-02-07 16:30:36 UTC
There is a request from @jjazeix for testing the fix at https://invent.kde.org/sdk/lokalize/-/merge_requests/86 Could anyone affected test it and say "works for me"?
Comment 18 wojnilowicz 2024-02-14 20:04:04 UTC
Git commit f5b674c3b7f4aa58dd660b53218593e8dc062c19 by Łukasz Wojniłowicz.
Committed on 14/02/2024 at 20:01.
Pushed by wojnilowicz into branch 'master'.

Fix stalled jobs when TM prefetch is enabled

M  +39   -25   src/tm/jobs.h
M  +16   -2    src/tm/tmview.cpp
M  +1    -0    src/tm/tmview.h

https://invent.kde.org/sdk/lokalize/-/commit/f5b674c3b7f4aa58dd660b53218593e8dc062c19