Fix stalled jobs when TM prefetch is enabled

BUG:474685